src/components/Home/IssueBlocks.scss
.issue-blocks {
  padding: 180px 0;

  @include media-down(tablet) {
    padding: 120px 0;
  }

  @include media-down(mobile) {
    padding: 80px 0;
  }

  .issues {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;

    @include media-down(tablet) {
      // flex-wrap: wrap;
    }

    @include media-down(mobile) {
      flex-direction: column;
    }

    .issue {
      flex: 1;
      display: flex;
      flex-direction: column;
      align-items: center;
      margin-right: 100px;
      position: relative;

      @include media-down(tablet) {
        flex: auto;
        margin: 0 30px;
        width: calc((100% / 3) - 60px)
      }

      @include media-down(mobile) {
        width: 100%;
        margin: 0 0 80px;
      }

      &:last-child {
        @include media-up(tablet) {
          margin-right: 0;
        }

        @include media-down(mobile) {
          margin-bottom: 0;
        }
      }

      .illustration {
        width: 100%;
        padding-bottom: 100%;
        margin-bottom: 40px;
        position: relative;

        @include media-down(mobile) {
          padding-bottom: 0;
          height: 100vw;
          max-width: 250px;
          max-height: 250px;
          margin: 0 auto 30px;
        }

        svg {
          @include center-align(absolute);
          width: 100%;
          height: 100%;
        }
      }

      .text-container {
        width: 100%;
        max-width: 450px;
        display: flex;
        flex-direction: column;
        align-items: center;
        margin: 0 auto;
      }

      .count {
        display: inline-block;
        @include h4();
        color: $secondary;
        border-bottom: $secondary 2px dashed;
        margin-bottom: 40px;

        @include media-down(tablet) {
          text-align: center;
          margin-bottom: 20px;
        }
      }

      .title {
        display: inline;
        @include h2();
        margin-bottom: 40px;
        text-align: center;

        @include media-down(tablet) {
          font-size: 28px;
          margin-bottom: 30px;
        }

        @include media-down(mobile) {
          max-width: 350px;
        }

        span {
          background: linear-gradient(to right, rgba($white ,0) 50%, rgba($tertiary, 1.0) 50%);
          background-size: 200%;
          background-position: 0 0;
          transition-property: all;
          transition-timing-function: ease-out;
          transition-duration: 1s;
          transition-delay: 0.5s;

          &.visible {
            background-position: -100% 0;
          }
        }
      }

      .html-content {
        p {
          text-align: center;
        }
      }
    }
  }

}

